# chfloat

./: CMakeLists.txt  README.md
benchmark/: benchmark_main.cpp
include/chfloat/: chfloat.h
include/chfloat/detail/: float_parse.h  pow5_table.h
report/: benchmark.md
script/: gen_pow5_table.py
test/: test_main.cpp
